@@ -1,3 +1,6 @@
+2008-11-25 fabien
+* add more columns in bug_module view to be able to sort by project, ...
+
 2008-10-6 yusei
 * Set original English term to a new term when create a new term from English ones.
 
